force-app/main/default/objects/Hierarchy_Content_Update__e/Hierarchy_Content_Update__e.object-meta.xml
<CustomObject>
    <label>Hierarchy Content Update</label>
    <pluralLabel>Hierarchy Content Updates</pluralLabel>
</CustomObject>