force-app/main/default/objects/Hierarchy_Content_Update__e/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <description>Id of the record that has been updated</description>
    <label>Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>