force-app/main/default/objects/Hierarchy_Content_Update__e/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Updated Name</description>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>