force-app/main/default/objects/Hierarchy_Content_Update__e/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>Phone</label>
    <length>30</length>
    <type>Text</type>
</CustomField>